--- a/evaluation/rule_only.ipynb
+++ b/evaluation/rule_only.ipynb
@@ -45,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('C:/Users/gianl/OneDrive/Desktop/Progs/SMACE/')"
+    "# path here\n",
+    "sys.path.append('C:/Users/gianl/OneDrive/Desktop/Progs/Official/smace')"
    ]
   },
   {
@@ -332,7 +333,7 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple')\n",
+    "e = explainer.explain(example, 'simple').exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
@@ -507,7 +508,7 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple')\n",
+    "e = explainer.explain(example, 'simple').exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
@@ -674,7 +675,7 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple')\n",
+    "e = explainer.explain(example, 'simple').exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
@@ -842,7 +843,7 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple')\n",
+    "e = explainer.explain(example, 'simple').exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
@@ -1008,7 +1009,7 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple')\n",
+    "e = explainer.explain(example, 'simple').exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
@@ -1077,36 +1078,6 @@
     "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
     "print('Precision: %.2f' % exp.precision())\n",
     "print('Coverage: %.2f' % exp.coverage())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "b4786f90",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.5152147 , 0.4788234 , 0.22449348],\n",
-       "       [0.00704672, 0.05952861, 0.04431166],\n",
-       "       [0.62417972, 0.26483666, 0.02291513],\n",
-       "       [0.31898601, 0.12191981, 0.19964557],\n",
-       "       [0.52178121, 0.78847913, 0.23698206],\n",
-       "       [0.21369324, 0.76728451, 0.19446581],\n",
-       "       [0.00531653, 0.2772001 , 0.0511109 ],\n",
-       "       [0.53128781, 0.24829073, 0.18756989],\n",
-       "       [0.96303234, 0.93826177, 0.18819426],\n",
-       "       [0.53376109, 0.10315472, 0.02452249]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp.examples()"
    ]
   }
  ],
