--- a/evaluation/hybrid_case1.ipynb
+++ b/evaluation/hybrid_case1.ipynb
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "# decision rules\n",
-    "with open('rule_case1.json', 'r') as fp:\n",
+    "with open('rule_mod.json', 'r') as fp:\n",
     "    rules_json = json.load(fp)"
    ]
   },
@@ -198,8 +198,8 @@
     "reg2 = linear_model.LinearRegression()\n",
     "reg2.fit(X,y2)\n",
     "\n",
-    "model_1 = Model(reg1.predict, 'mod_1', df)\n",
-    "model_2 = Model(reg2.predict, 'mod_2', df)\n",
+    "model_1 = Model(reg1, 'mod_1', df)\n",
+    "model_2 = Model(reg2, 'mod_2', df)\n",
     "\n",
     "models_list = [model_1, model_2]"
    ]
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "dm.rules['mod'].labels"
+    "dm.rules['case1'].labels"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explanation = explainer.explain(example, 'mod')"
+    "explanation = explainer.explain(example, 'case1')"
    ]
   },
   {
