--- a/evaluation/hybrid_case1.ipynb
+++ b/evaluation/hybrid_case1.ipynb
@@ -25,6 +25,7 @@
     "import lime.lime_tabular\n",
     "import sys\n",
     "from sklearn import linear_model\n",
+    "import os\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "np.random.seed(seed=1)"
@@ -38,7 +39,8 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "sys.path.append('C:/Users/gianl/OneDrive/Desktop/Progs/Official/smace')"
+    "path = os.getcwd().replace('evaluation','')\n",
+    "sys.path.append(path)"
    ]
   },
   {
