--- a/evaluation/rule_only.ipynb
+++ b/evaluation/rule_only.ipynb
@@ -32,7 +32,7 @@
     "import lime.lime_tabular\n",
     "import sys\n",
     "from anchor import anchor_tabular\n",
-    "\n",
+    "import os\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "np.random.seed(seed=1)"
@@ -46,7 +46,8 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "sys.path.append('C:/Users/gianl/OneDrive/Desktop/Progs/Official/smace')"
+    "path = os.getcwd().replace('evaluation','')\n",
+    "sys.path.append(path)"
    ]
   },
   {
