--- a/example.ipynb
+++ b/example.ipynb
@@ -184,7 +184,7 @@
    "id": "37fdd70e",
    "metadata": {},
    "source": [
-    "There are two machine learning models: \n",
+    "There are three machine learning models: \n",
     "* *lm*: LinearRegression trained to fit the function $f_1 = x_2 - 2x_3 + 8x_5 + x_6 $\n",
     "* *xgb*: XGBRegressor trained to fit $ f_2 = -100x_1+80x_2x_4+50x_3 $\n",
     "* *dtree*: DecisionTreeRegressor trained to fit $500\\mathbb{1}_{x_4>0.5}$"
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ae5825bf",
+   "id": "a6044cbc",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5fae6610",
+   "id": "3e10752f",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7ccb7e45",
+   "id": "c3be5e85",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d0918b4b",
+   "id": "f0e88e4a",
    "metadata": {},
    "outputs": [
     {
