--- a/evaluation/notebooks/hybrid_case1.ipynb
+++ b/evaluation/notebooks/hybrid_case1.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "97e9c6ad",
    "metadata": {},
    "outputs": [
@@ -722,19 +722,19 @@
        "      <th>x1</th>\n",
        "      <td>-0.863473</td>\n",
        "      <td>-0.043</td>\n",
-       "      <td>-0.101</td>\n",
+       "      <td>-0.097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x2</th>\n",
        "      <td>-0.716605</td>\n",
        "      <td>-0.043</td>\n",
-       "      <td>-0.099</td>\n",
+       "      <td>-0.096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x3</th>\n",
        "      <td>1.190688</td>\n",
-       "      <td>-0.043</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>0.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -742,19 +742,19 @@
       ],
       "text/plain": [
        "       SMACE   SHAP   LIME\n",
-       "x1 -0.863473 -0.043 -0.101\n",
-       "x2 -0.716605 -0.043 -0.099\n",
-       "x3  1.190688 -0.043  0.018"
+       "x1 -0.863473 -0.043 -0.097\n",
+       "x2 -0.716605 -0.043 -0.096\n",
+       "x3  1.190688 -0.003  0.000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "e = explanation.exp\n",
-    "shap_values = shap_explainer.shap_values(example)[0]\n",
+    "shap_values = shap_explainer.shap_values(example)\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
