--- a/evaluation/notebooks/rule_only.ipynb
+++ b/evaluation/notebooks/rule_only.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "path = os.getcwd().replace('evaluation','')\n",
+    "path = os.getcwd().replace(os.path.join('evaluation', 'notebooks'),'')\n",
     "sys.path.append(path)"
    ]
   },
