black formatting of notebooks

--- a/evaluation/notebooks/hybrid_case3.ipynb
+++ b/evaluation/notebooks/hybrid_case3.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "path = os.getcwd().replace('evaluation','')\n",
+    "path = os.getcwd().replace(\"evaluation\", \"\")\n",
     "sys.path.append(path)"
    ]
   },
@@ -149,7 +149,7 @@
    "source": [
     "# input data\n",
     "data = np.random.rand(1000, 3)\n",
-    "df = pd.DataFrame(data, columns=['x1', 'x2', 'x3'])\n",
+    "df = pd.DataFrame(data, columns=[\"x1\", \"x2\", \"x3\"])\n",
     "df.head()"
    ]
   },
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "# decision rules\n",
-    "with open('rule_mod.json', 'r') as fp:\n",
+    "with open(\"rule_mod.json\", \"r\") as fp:\n",
     "    rules_json = json.load(fp)"
    ]
   },
@@ -184,24 +184,29 @@
     "# models\n",
     "def f_1(x):\n",
     "    return 1 * x[:, 1] + 2 * x[:, 2]\n",
-    "print('Model 1: 1*x2 + 2*x3')\n",
+    "\n",
+    "\n",
+    "print(\"Model 1: 1*x2 + 2*x3\")\n",
+    "\n",
     "\n",
     "def f_2(x):\n",
-    "    return - 500 * x[:, 1] + 1000 * x[:, 2]\n",
-    "print('Model 2: - 500*x2 + 1000*x3')\n",
+    "    return -500 * x[:, 1] + 1000 * x[:, 2]\n",
+    "\n",
+    "\n",
+    "print(\"Model 2: - 500*x2 + 1000*x3\")\n",
     "\n",
     "X = df.values\n",
     "y1 = f_1(X)\n",
     "y2 = f_2(X)\n",
     "\n",
     "reg1 = linear_model.LinearRegression()\n",
-    "reg1.fit(X,y1)\n",
+    "reg1.fit(X, y1)\n",
     "\n",
     "reg2 = linear_model.LinearRegression()\n",
-    "reg2.fit(X,y2)\n",
+    "reg2.fit(X, y2)\n",
     "\n",
-    "model_1 = Model(reg1, 'mod_1', df)\n",
-    "model_2 = Model(reg2, 'mod_2', df)\n",
+    "model_1 = Model(reg1, \"mod_1\", df)\n",
+    "model_2 = Model(reg2, \"mod_2\", df)\n",
     "\n",
     "models_list = [model_1, model_2]"
    ]
@@ -214,7 +219,7 @@
    "outputs": [],
    "source": [
     "# decision system\n",
-    "dm = DM(rules_json, models_list, df)  "
+    "dm = DM(rules_json, models_list, df)"
    ]
   },
   {
@@ -228,10 +233,13 @@
     "explainer = Smace(dm)\n",
     "data_summary = shap.sample(df, 100)\n",
     "shap_explainer = shap.KernelExplainer(dm.make_decision_eval, data_summary)\n",
-    "lime_explainer = lime.lime_tabular.LimeTabularExplainer(df.values, feature_names=df.columns,\n",
-    "                                                        discretize_continuous=True, verbose=False,\n",
-    "                                                        mode='classification',\n",
-    "                                                        )"
+    "lime_explainer = lime.lime_tabular.LimeTabularExplainer(\n",
+    "    df.values,\n",
+    "    feature_names=df.columns,\n",
+    "    discretize_continuous=True,\n",
+    "    verbose=False,\n",
+    "    mode=\"classification\",\n",
+    ")"
    ]
   },
   {
@@ -252,7 +260,7 @@
     }
    ],
    "source": [
-    "dm.rules['case1'].labels"
+    "dm.rules[\"case1\"].labels"
    ]
   },
   {
@@ -290,8 +298,8 @@
     }
    ],
    "source": [
-    "print('Model 1 predicts: ', str(model_1.predict(example)))\n",
-    "print('Model 2 predicts: ', str(model_2.predict(example)))"
+    "print(\"Model 1 predicts: \", str(model_1.predict(example)))\n",
+    "print(\"Model 2 predicts: \", str(model_2.predict(example)))"
    ]
   },
   {
@@ -311,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explanation = explainer.explain(example, 'case1')"
+    "explanation = explainer.explain(example, \"case1\")"
    ]
   },
   {
@@ -340,10 +348,19 @@
     }
    ],
    "source": [
-    "print('Model 1')\n",
-    "print('Expected SHAP value for x1: 0*(x1-E[x1]) =', 0*(example[0]-df.x1.mean()) / model_1.predict(df).std())\n",
-    "print('Expected SHAP value for x2: 1.5*(x2-E[x2]) =', 1.5*(example[1]-df.x2.mean()) / model_1.predict(df).std())\n",
-    "print('Expected SHAP value for x3: 2*(x3-E[x3]) =', 2*(example[2]-df.x3.mean()) / model_1.predict(df).std())"
+    "print(\"Model 1\")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x1: 0*(x1-E[x1]) =\",\n",
+    "    0 * (example[0] - df.x1.mean()) / model_1.predict(df).std(),\n",
+    ")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x2: 1.5*(x2-E[x2]) =\",\n",
+    "    1.5 * (example[1] - df.x2.mean()) / model_1.predict(df).std(),\n",
+    ")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x3: 2*(x3-E[x3]) =\",\n",
+    "    2 * (example[2] - df.x3.mean()) / model_1.predict(df).std(),\n",
+    ")"
    ]
   },
   {
@@ -406,7 +423,7 @@
     }
    ],
    "source": [
-    "explanation.model_table('mod_1')"
+    "explanation.model_table(\"mod_1\")"
    ]
   },
   {
@@ -439,7 +456,7 @@
     }
    ],
    "source": [
-    "explanation.model_bar('mod_1')"
+    "explanation.model_bar(\"mod_1\")"
    ]
   },
   {
@@ -460,10 +477,19 @@
     }
    ],
    "source": [
-    "print('Model 2')\n",
-    "print('Expected SHAP value for x1: 0*(x1-E[x1]) =', 0*(example[0]-df.x1.mean()) / model_2.predict(df).std())\n",
-    "print('Expected SHAP value for x2: -500*(x2-E[x2]) =', -500*(example[1]-df.x2.mean()) / model_2.predict(df).std())\n",
-    "print('Expected SHAP value for x3: 1000*(x3-E[x3]) =', 1000*(example[2]-df.x3.mean()) / model_2.predict(df).std())"
+    "print(\"Model 2\")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x1: 0*(x1-E[x1]) =\",\n",
+    "    0 * (example[0] - df.x1.mean()) / model_2.predict(df).std(),\n",
+    ")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x2: -500*(x2-E[x2]) =\",\n",
+    "    -500 * (example[1] - df.x2.mean()) / model_2.predict(df).std(),\n",
+    ")\n",
+    "print(\n",
+    "    \"Expected SHAP value for x3: 1000*(x3-E[x3]) =\",\n",
+    "    1000 * (example[2] - df.x3.mean()) / model_2.predict(df).std(),\n",
+    ")"
    ]
   },
   {
@@ -526,7 +552,7 @@
     }
    ],
    "source": [
-    "explanation.model_table('mod_2')"
+    "explanation.model_table(\"mod_2\")"
    ]
   },
   {
@@ -559,7 +585,7 @@
     }
    ],
    "source": [
-    "explanation.model_bar('mod_2')"
+    "explanation.model_bar(\"mod_2\")"
    ]
   },
   {
@@ -758,9 +784,9 @@
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -817,12 +843,13 @@
    "source": [
     "# Anchors\n",
     "from anchor import anchor_tabular\n",
-    "print('Anchors')\n",
+    "\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   }
  ],
