--- a/evaluation/notebooks/rule_only.ipynb
+++ b/evaluation/notebooks/rule_only.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "path = os.getcwd().replace(os.path.join('evaluation', 'notebooks'),'')\n",
+    "path = os.getcwd().replace(os.path.join(\"evaluation\", \"notebooks\"), \"\")\n",
     "sys.path.append(path)"
    ]
   },
@@ -155,7 +155,7 @@
    "source": [
     "# input data\n",
     "data = np.random.rand(1000, 3)\n",
-    "df = pd.DataFrame(data, columns=['x1', 'x2', 'x3'])\n",
+    "df = pd.DataFrame(data, columns=[\"x1\", \"x2\", \"x3\"])\n",
     "df.head()"
    ]
   },
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "# decision rules\n",
-    "with open('rule_simple.json', 'r') as fp:\n",
+    "with open(\"rule_simple.json\", \"r\") as fp:\n",
     "    rules_json = json.load(fp)"
    ]
   },
@@ -193,10 +193,13 @@
     "explainer = Smace(dm)\n",
     "data_summary = shap.sample(df, 100)\n",
     "shap_explainer = shap.KernelExplainer(dm.make_decision_eval, data_summary)\n",
-    "lime_explainer = lime.lime_tabular.LimeTabularExplainer(df.values, feature_names=df.columns,\n",
-    "                                                        discretize_continuous=True, verbose=False,\n",
-    "                                                        mode='classification',\n",
-    "                                                        )"
+    "lime_explainer = lime.lime_tabular.LimeTabularExplainer(\n",
+    "    df.values,\n",
+    "    feature_names=df.columns,\n",
+    "    discretize_continuous=True,\n",
+    "    verbose=False,\n",
+    "    mode=\"classification\",\n",
+    ")"
    ]
   },
   {
@@ -225,7 +228,7 @@
     }
    ],
    "source": [
-    "dm.rules['simple'].labels"
+    "dm.rules[\"simple\"].labels"
    ]
   },
   {
@@ -356,14 +359,14 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple').exp\n",
+    "e = explainer.explain(example, \"simple\").exp\n",
     "shap_values = shap_explainer.shap_values(example)\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -419,12 +422,12 @@
    ],
    "source": [
     "# Anchors\n",
-    "print('Anchors')\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   },
   {
@@ -531,14 +534,14 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple').exp\n",
+    "e = explainer.explain(example, \"simple\").exp\n",
     "shap_values = shap_explainer.shap_values(example)[0]\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -594,12 +597,12 @@
    ],
    "source": [
     "# Anchors\n",
-    "print('Anchors')\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   },
   {
@@ -698,14 +701,14 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple').exp\n",
+    "e = explainer.explain(example, \"simple\").exp\n",
     "shap_values = shap_explainer.shap_values(example)\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -761,12 +764,12 @@
    ],
    "source": [
     "# Anchors\n",
-    "print('Anchors')\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   },
   {
@@ -866,14 +869,14 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple').exp\n",
+    "e = explainer.explain(example, \"simple\").exp\n",
     "shap_values = shap_explainer.shap_values(example)\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -929,12 +932,12 @@
    ],
    "source": [
     "# Anchors\n",
-    "print('Anchors')\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   },
   {
@@ -1032,14 +1035,14 @@
     }
    ],
    "source": [
-    "e = explainer.explain(example, 'simple').exp\n",
+    "e = explainer.explain(example, \"simple\").exp\n",
     "shap_values = shap_explainer.shap_values(example)\n",
     "exp = lime_explainer.explain_instance(example, dm.make_decision_class)\n",
     "lime_values = utils.lime_mapper(exp)\n",
     "res = pd.DataFrame(index=list(e.keys()))\n",
-    "res['SMACE'] = list(e.values())\n",
-    "res['SHAP'] = np.round(shap_values, 3)\n",
-    "res['LIME'] = np.round(lime_values, 3)\n",
+    "res[\"SMACE\"] = list(e.values())\n",
+    "res[\"SHAP\"] = np.round(shap_values, 3)\n",
+    "res[\"LIME\"] = np.round(lime_values, 3)\n",
     "res"
    ]
   },
@@ -1095,12 +1098,12 @@
    ],
    "source": [
     "# Anchors\n",
-    "print('Anchors')\n",
+    "print(\"Anchors\")\n",
     "anchors_exp = anchor_tabular.AnchorTabularExplainer([0, 1], df.columns, df.values)\n",
     "exp = anchors_exp.explain_instance(example, dm.make_decision_eval, threshold=0.95)\n",
-    "print('Anchor: %s' % (' AND '.join(exp.names())))\n",
-    "print('Precision: %.2f' % exp.precision())\n",
-    "print('Coverage: %.2f' % exp.coverage())"
+    "print(\"Anchor: %s\" % (\" AND \".join(exp.names())))\n",
+    "print(\"Precision: %.2f\" % exp.precision())\n",
+    "print(\"Coverage: %.2f\" % exp.coverage())"
    ]
   }
  ],
