--- a/evaluation/notebooks/telco_case.ipynb
+++ b/evaluation/notebooks/telco_case.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# path here\n",
-    "path = os.getcwd().replace(os.path.join('evaluation', 'notebooks'),'')\n",
+    "path = os.getcwd().replace(os.path.join(\"evaluation\", \"notebooks\"), \"\")\n",
     "sys.path.append(path)"
    ]
   },
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# input data\n",
-    "df = pd.read_csv('telco_data.csv').drop(columns={'ID'})"
+    "df = pd.read_csv(\"telco_data.csv\").drop(columns={\"ID\"})"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "# decision rules\n",
-    "with open('telco_rules.json', 'r') as fp:\n",
+    "with open(\"telco_rules.json\", \"r\") as fp:\n",
     "    rules_json = json.load(fp)"
    ]
   },
@@ -272,7 +272,15 @@
    "outputs": [],
    "source": [
     "# preprocess\n",
-    "categorical_names = ['Gender', 'Status', 'Car Owner', 'Paymethod', 'LocalBilltype', 'LongDistanceBilltype']\n",
+    "categorical_names = [\n",
+    "    \"Gender\",\n",
+    "    \"Status\",\n",
+    "    \"Car Owner\",\n",
+    "    \"Paymethod\",\n",
+    "    \"LocalBilltype\",\n",
+    "    \"LongDistanceBilltype\",\n",
+    "]\n",
+    "\n",
     "\n",
     "def df_prep(dataframe):\n",
     "    # String to numbers: {F,M} -> {0,1}\n",
@@ -455,7 +463,7 @@
     "y_cr = df.CHURN\n",
     "y_ltv = df.LTV\n",
     "\n",
-    "data = df_prep(df.drop(columns={'CHURN', 'LTV'}))\n",
+    "data = df_prep(df.drop(columns={\"CHURN\", \"LTV\"}))\n",
     "data.head()"
    ]
   },
@@ -466,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# preprocess       \n",
+    "# preprocess\n",
     "X = data.copy()\n",
     "for feature in categorical_names:\n",
     "    # ONE HOT ENCODING\n",
@@ -485,7 +493,7 @@
    "outputs": [],
    "source": [
     "# models\n",
-    "xgb_cr = xgb.XGBClassifier(objective='reg:logistic').fit(X, y_cr)\n",
+    "xgb_cr = xgb.XGBClassifier(objective=\"reg:logistic\").fit(X, y_cr)\n",
     "xgb_ltv = xgb.XGBRegressor().fit(X, y_ltv)"
    ]
   },
@@ -496,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# preprocess for example  \n",
+    "# preprocess for example\n",
     "def preprocess(x):\n",
     "    X = data.copy()\n",
     "    if x.ndim == 1:\n",
@@ -520,8 +528,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cr_mod = Model(xgb_cr, 'cr', data, mode='classification', preprocess=preprocess)\n",
-    "ltv_mod = Model(xgb_ltv, 'ltv', data, mode='regression', preprocess=preprocess)\n",
+    "cr_mod = Model(xgb_cr, \"cr\", data, mode=\"classification\", preprocess=preprocess)\n",
+    "ltv_mod = Model(xgb_ltv, \"ltv\", data, mode=\"regression\", preprocess=preprocess)\n",
     "\n",
     "models_list = [cr_mod, ltv_mod]"
    ]
@@ -557,7 +565,7 @@
     }
    ],
    "source": [
-    "dm.rules['simple'].labels"
+    "dm.rules[\"simple\"].labels"
    ]
   },
   {
@@ -611,9 +619,9 @@
     }
    ],
    "source": [
-    "print('cr_mod predicts: ', str(cr_mod.predict(example)))\n",
-    "print('ltv_mod predicts: ', str(ltv_mod.predict(example)))\n",
-    "print('Not all conditions are met.')"
+    "print(\"cr_mod predicts: \", str(cr_mod.predict(example)))\n",
+    "print(\"ltv_mod predicts: \", str(ltv_mod.predict(example)))\n",
+    "print(\"Not all conditions are met.\")"
    ]
   },
   {
@@ -635,7 +643,7 @@
    "source": [
     "# Initialize the explainers\n",
     "explainer = Smace(dm)\n",
-    "explanation = explainer.explain(example, 'simple')"
+    "explanation = explainer.explain(example, \"simple\")"
    ]
   },
   {
@@ -708,7 +716,7 @@
     }
    ],
    "source": [
-    "explanation.model_table('cr')"
+    "explanation.model_table(\"cr\")"
    ]
   },
   {
@@ -781,7 +789,7 @@
     }
    ],
    "source": [
-    "explanation.model_table('ltv')"
+    "explanation.model_table(\"ltv\")"
    ]
   },
   {
